fix: Remove overflowing image causing horizontal scroll

--- a/src/styles/blocks/main/powder.scss
+++ b/src/styles/blocks/main/powder.scss
@@ -7,6 +7,8 @@
 .powder {
   @include media.grid-320;
 
+  overflow: hidden;
+
   grid-template-rows: auto auto auto;
 
   position: relative;
@@ -61,12 +63,12 @@
 
     position: relative;
 
-    left: -40px;
+    left: -30px;
 
     height: 397px;
     width: calc(100% + 60px);
 
-    background-image: url('/src/images/img/powder/img-02.png');
+    background-image: url('/src/images/img/powder/pow-320.svg');
     background-size: auto;
     background-position: left;
     background-repeat: no-repeat;
@@ -117,6 +119,9 @@
       grid-row: 1 / 4;
 
       width: calc(100% + 100px);
+      left: 0;
+
+      background-image: url('/src/images/img/powder/pow-768.svg');
     }
 
     &__text {
@@ -183,20 +188,19 @@
         align-self: right;
       }
     }
+
     &__image {
       grid-column: 8 / span 6;
 
-      left: -30px;
-
       width: calc(100% + 30px);
+
+      background-image: url('/src/images/img/powder/pow-1280.svg');
     }
 
     &__text {
       grid-column: 2 / span 2;
 
       &--more {
-        // width: calc(100% + 30px);
-
         @include poppins.text-decorative;
       }
     }
